use elementNROWS() instead of defunct elementLengths()
git-svn-id: file:///home/git/bioc-data.hedgehog.fhcrc.org/trunk/experiment/pkgs/SomaticCancerAlterations@3945 db2202da-8704-0410-b924-b125b3cd84ef

--- a/vignettes/SomaticCancerAlterations.lyx
+++ b/vignettes/SomaticCancerAlterations.lyx
@@ -461,7 +461,7 @@ three_studies = scaLoadDatasets(all_datasets[1:3])
 \end_layout
 
 \begin_layout Chunk
-print(elementLengths(three_studies))
+print(elementNROWS(three_studies))
 \end_layout
 
 \begin_layout Chunk
