--- a/vignettes/SomaticCancerAlterations.org
+++ b/vignettes/SomaticCancerAlterations.org
@@ -117,7 +117,7 @@ object with =merge = TRUE=.
 #+BEGIN_SRC R
   three_studies = scaLoadDatasets(all_datasets[1:3])
   
-  print(elementLengths(three_studies))
+  print(elementNROWS(three_studies))
   
   class(three_studies)
 #+END_SRC
